<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Required">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/osuGr"
        android:elevation="20dp"
        android:layout_marginTop="@dimen/top_margin"
        android:stretchColumns="*">

        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_cpu_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:text="@string/cs_required_cpu_title" />
            <TextView
                android:id="@+id/required_cpu_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_cpu_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_ram_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_ram_title" />
            <TextView
                android:id="@+id/required_ram_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_ram_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_drive_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_drive_title" />
            <TextView
                android:id="@+id/required_drive_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_drive_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_screen_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_screen_title" />
            <TextView
                android:id="@+id/required_screen_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_screen_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_graphics_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_graphics_title" />
            <TextView
                android:id="@+id/required_graphics_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_graphics_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_network_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_network_title" />
            <TextView
                android:id="@+id/required_network_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_network_specs" />
        </TableRow>
        <TableRow android:padding="@dimen/table_padding">
            <TextView
                android:id="@+id/required_os_title"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/osuLOrng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_os_title" />
            <TextView
                android:id="@+id/required_os_specs"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/soft_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cs_required_os_specs" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/os_note"
        android:padding="@dimen/table_padding"
        android:background="@color/osuGrTrans"
        android:textColor="@color/soft_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:elevation="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="bottom"
        android:text="@string/cs_note"
        android:textAlignment="center" />
</FrameLayout>